--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -9,6 +9,7 @@
 <link href="~/assets/css/dashboard/dash_1.css" rel="stylesheet" type="text/css" />
 <link href="~/assets/css/elements/alert.css" rel="stylesheet" />
 <style>
+    
     .form-control.custom-image-select-1 {
         height: 50px;
     }
@@ -378,7 +379,7 @@
                 </div>
 
 
-                @*<div class="col-xl-6 col-xxl-12">
+                <div class="col-xl-6 col-xxl-12">
         <div class="card">
             <div class="card-header d-block d-sm-flex border-0">
                 <div>
@@ -479,7 +480,7 @@
 
             </div>
         </div>
-    </div>*@
+    </div>
                 <div class="col-xl-6 col-xxl-12">
                     <div class="card pb-5">
                         <div class="card-header d-sm-flex d-block pb-0 border-0">
