--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -1111,6 +1111,9 @@
     <script src="/UserPanel/js/deznav-init.js"></script>
     @*<script src="/UserPanel/js/demo.js"></script>*@
 
+    @*<script src="~/UserPanel/js/plugins-init/chartist-init.js"></script>*@
+    <script src="~/UserPanel/vendor/chartist/js/chartist.min.js"></script>
+    <script src="~/UserPanel/vendor/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
 
     <script>
         jQuery(document).ready(function () {
@@ -1888,21 +1891,20 @@
                             var AllYear = [];
                             var t = JSON.parse(JSON.stringify(d));
                             for (var i = 0; i < t.length; i++) {
-                                    //AllYear.push(t[i].Year);
-                                    //PaidCramount.push(t[i].Cramount);
-                                    //PaidDramount.push(t[i].Dramount);
-                                
+                                //AllYear.push(t[i].Year);
+                                //PaidCramount.push(t[i].Cramount);
+                                //PaidDramount.push(t[i].Dramount);
+
                                 //debugger;
                                 //let YY = AllYear;
                                 //let Cr = PaidCramount;
                                 //let Dr = PaidDramount;
                                 let x = "";
                                 
-                            
                                 debugger;
 
                                 var chartBarRunningOptions = {
-                                    series:[{
+                                    series: [{
                                         name: 'Buy',
                                         data: [{
                                             x: t[i].Year,
@@ -1918,7 +1920,7 @@
                                                 }]
                                             }],
 
-                                    
+
                                     chart: {
                                         type: 'rangeBar',
                                         height: 370,
@@ -1939,7 +1941,7 @@
                                     },
                                     colors: ['#61C277', '#FF3E3E'],
                                     dataLabels: {
-                                        enabled: false,
+                                        enabled: true,
                                     },
                                     markers: {
                                         shape: "circle",
@@ -1968,7 +1970,7 @@
                                     grid: {
                                         borderColor: '#eee',
                                     },
-                                    xaxis: { 
+                                    xaxis: {
                                         labels: {
                                             style: {
                                                 colors: '#787878',
@@ -2032,22 +2034,22 @@
                                     }]
 
                                 }
-                               
-                            }
-                           
-                                debugger;
-                                var chartBarRunningObject = new ApexCharts(document.querySelector("#chartBarRunning"), chartBarRunningOptions);
-                               
-                           
-                          
-                                chartBarRunningObject.render();
-                            
-                        },
-                    error: function (err) {
 
-                    } 
-                });    
-                        
+                            }
+
+                            debugger;
+                            var chartBarRunningObject = new ApexCharts(document.querySelector("#chartBarRunning"), chartBarRunningOptions);
+
+
+
+                            chartBarRunningObject.render();
+                       
+                        },
+                        error: function (err) {
+
+                        }
+                    });
+
                 }
              ////// fro testin chart
              //   var chartBarRunning23 = function () {
@@ -2738,6 +2740,117 @@
                 }
             }
         })
+    </script>
+    <script>
+        var dzChartlist = function () {
+
+            var screenWidth = $(window).width();
+
+            var setChartWidth = function () {
+
+                if (screenWidth <= 768) {
+                    var chartBlockWidth = 0;
+                    if (screenWidth >= 500) {
+                        chartBlockWidth = 250;
+                    } else {
+                        chartBlockWidth = 300;
+                    }
+
+                    jQuery('.chartlist-chart').css('min-width', chartBlockWidth - 31);
+                }
+            }
+
+
+            var labelPlacementChart = function () {
+                debugger;
+                $.ajax({
+                    url: "/User/GetchartBarRunning",
+                    type: "GET",
+                    dataType: 'JSON',
+                    data: JSON.stringify(),
+                    contentType: 'application/json;',
+                    success: function (d) {
+                        debugger;
+                        var PaidCramount = [];
+                        var PaidDramount = [];
+                        var AllYear = [];
+                        var t = JSON.parse(JSON.stringify(d));
+                        for (var i = 0; i < t.length; i++) {
+                            AllYear.push(t[i].Year);
+                            PaidCramount.push(t[i].Cramount);
+                            PaidDramount.push(t[i].Dramount);
+                        }
+                        debugger;
+                        let YY = AllYear;
+                        let Cr = PaidCramount;
+                        let Dr = PaidDramount;
+
+                        new Chartist.Bar('#label-placement-chart', {
+                            //labels: YY,
+                            labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+                            //series: [
+                            //  Cr,
+                            //  Dr
+                            //]
+                            series: [
+                              [5, 4, 3, 7, 5, 10, 3],
+                              [3, 2, 9, 5, 4, 6, 4]
+                            ]
+                        }, {
+                            axisX: {
+                                // On the x-axis start means top and end means bottom
+                                position: 'start'
+                            },
+                            axisY: {
+                                // On the y-axis start means left and end means right
+                                position: 'end'
+                            },
+                            plugins: [
+                                  Chartist.plugins.tooltip()
+                            ]
+                        });
+                    },
+                    error: function (err) {
+
+                    }
+                });
+            }
+
+
+
+            /* Function ============ */
+            return {
+                init: function () {
+                },
+
+
+                load: function () {
+                    labelPlacementChart();
+                },
+
+                resize: function () {
+                    labelPlacementChart();
+                }
+            }
+
+        }();
+
+        jQuery(document).ready(function () {
+        });
+
+        jQuery(window).on('load', function () {
+            setTimeout(function () {
+                dzChartlist.resize();
+            }, 1000);
+        });
+
+        jQuery(window).on('resize', function () {
+            setTimeout(function () {
+                dzChartlist.resize();
+            }, 1000);
+
+        });
+
     </script>
 </body>
 </html>
