--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -9,7 +9,7 @@
 <link href="~/assets/css/dashboard/dash_1.css" rel="stylesheet" type="text/css" />
 <link href="~/assets/css/elements/alert.css" rel="stylesheet" />
 <style>
-    
+   
     .form-control.custom-image-select-1 {
         height: 50px;
     }
@@ -283,10 +283,10 @@
                     <div class="card overflow-hidden">
                         <div class="card-header align-items-start border-0 pb-0">
                             <div class="me-auto">
-                                <a href="/Report/PayoutDetail" class="py-0">
+                                <a href="/Report/PayoutWalletLedger" class="py-0">
                                     <p class="mb-2 fs-13"><i class="fa fa-caret-up scale5 me-2 text-success" aria-hidden="true"></i>Total Payout @*<img src="~/UserPanel/images/MtgCoinPng.png" class="mtgcoin6" height="47" />*@</p>
                                     <h3 class="text-black mb-0 font-w600"><img src="~/UserPanel/images/mtg.png" /> @ViewBag.TotalAmount</h3></a>
-</div>
+                            </div>
                         </div>
                         <div class="card-footer d-flex justify-content-between border-0">
                             <div class="footer-info font-w600">
