--- a/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
+++ b/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
@@ -74,6 +74,7 @@
                                             <th>T_Bonus</th>
                                             <th>T_Bonus Date</th>
                                             <th>Status</th>
+                                            <th>Paid Date</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -90,6 +91,7 @@
                                                         <td>@Item.ROI</td>
                                                         <td>@Item.Date</td>
                                                         <td>@Item.Status</td>
+                                                        <td>@Item.ClosingDate</td>
                                                     </tr>
                                                     i++;
                                                 }
