--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     @*<link href="/UserPanel/vendor/owl-carousel/owl.carousel.css" rel="stylesheet">*@
     <link href="/UserPanel/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/UserPanel/vendor/chartist/css/chartist.min.css">
     <link href="/UserPanel/vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <link href="/UserPanel/vendor/sweetalert2/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="~/plugins/table/datatable/custom_dt_html5.css">
@@ -1084,6 +1085,8 @@
     <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
     <script src="~/bootstrap/js/popper.min.js"></script>
     <script src="~/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Chart Chartist plugin files -->
+
 
     <!-- Required vendors -->
     <script src="/UserPanel/vendor/global/global.min.js"></script>
@@ -1106,10 +1109,17 @@
     <script src="~/plugins/table/datatable/button-ext/jszip.min.js"></script>
     <script src="~/plugins/table/datatable/button-ext/buttons.html5.min.js"></script>
     <script src="~/plugins/table/datatable/button-ext/buttons.print.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="~/UserPanel/icons/flaticon/flaticon.css">
+    <link rel="stylesheet" type="text/css" href="~/UserPanel/icons/font-awesome/css/all.min.css">
     <!-- Dashboard 2 -->
     @*<script src="/UserPanel/js/dashboard/dashboard-4.js"></script>*@
     <script src="/UserPanel/js/deznav-init.js"></script>
     @*<script src="/UserPanel/js/demo.js"></script>*@
+      <!-- Chart Chartist plugin files -->
+    <script src="/UserPanel/vendor/chartist/js/chartist.min.js"></script>
+    <script src="/UserPanel/vendor/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+    <script src="/UserPanel/js/plugins-init/chartist-init.js"></script>
+ 
 
 
     <script>
@@ -2739,5 +2749,7 @@
             }
         })
     </script>
+
+   
 </body>
 </html>
