--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -4,8 +4,6 @@
     ViewBag.Title = "UserDashBoard";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="~/plugins/apex/apexcharts.css" rel="stylesheet" type="text/css">
 <link href="~/assets/css/dashboard/dash_1.css" rel="stylesheet" type="text/css" />
 <link href="~/assets/css/elements/alert.css" rel="stylesheet" />
 <style>
@@ -151,7 +149,22 @@
                     </div>
                 </div>
             }
-
+            <div class="row">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-12">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title">Label placement</h4>
+                                </div>
+                                <div class="card-body">
+                                    <div id="label-placement-chart" class="ct-chart ct-golden-section chartlist-chart"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- end cont stats -->
             <div class="row">
                 <div class="col-xl-3 col-sm-6">
@@ -1066,6 +1079,7 @@
     </div>
 }
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
 <script>
     $(document).ready(function () {
 
